2011-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Jan Görig
	* server-src/amrestore.pl: Allow to go to next file with -p.

2011-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: "%lld" do not works with perl-5.6.

2011-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdumpd.pl: Add CHECK command.
	* client-src/amdump_client.pl: Add check command.
	* man/xml-source/amdump_client.8.xml: Document check command.

2011-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Parse 'bytes' in reply.

2011-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix taperalog *FIT no going to second volume.

2011-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: print 'bytes' with 64 bits type.

2011-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: kb must be integer.

2011-01-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheckdump.pl: Do not quit the clerk if it is not defined

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdumpd.pl: Execute "$sbindir/amdump"

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Config.pl: Check recovery-limit, dump-limit,
	  amdump-server, index-server, tape-server.
	* installcheck/Makefile.am: Add amdump_client.
	* installcheck/amdump_client.pl: Test new amdump_client program.

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/Makefile.am: Add amdump_client.
	* client-src/amdump_client.pl: New client program.
	* common-src/conffile.c: Add amdump-server in client config file.
	* common-src/conffile.h: Add CNF_AMDUMP_SERVER
	* perl/Amanda/Config.swg: Add CNF_AMDUMP_SERVER
	* man/Makefile.am: Add amdump_client.8.
	* man/xml-source/amdump_client.8.xml: New man page for amdump_client.

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>